Mejoras en validación y diseño de productos
Se han eliminado varias imágenes de la carpeta `wwwroot\imatgesProductes\Productes` y se han actualizado las referencias a estas imágenes en varios archivos `.cshtml`.

Se ha añadido validación adicional en el método `AfegirProducte` del controlador `ProducteController.cs` para asegurar que los campos `codiProducte`, `nomProducte`, `preuProducte` e `imatgeproducte` no estén vacíos y que el precio del producto sea mayor que 0.

Se ha modificado el método `OnPostUploadAsync` en `ProducteController.cs` para manejar la subida de archivos de manera asíncrona y se ha mejorado la validación de la existencia del archivo.

Se ha añadido la fuente `Courier New` a varios estilos CSS en los archivos `.cshtml` y `.css`.

Se ha mejorado el diseño del formulario en `AfegirProducte.cshtml` añadiendo clases de Bootstrap para una mejor presentación y validación.

Se ha añadido un nuevo `ItemGroup` en el archivo del proyecto `CistellAissam.csproj` para eliminar las imágenes específicas de la carpeta `wwwroot\imatgesProductes\Productes`.

Se ha actualizado la propiedad `imatgeproducte` en el modelo `Producte.cs` para que sea obligatoria y nullable.

Se han eliminado varios archivos binarios de imágenes que ya no son necesarios.

Se han realizado ajustes menores en los estilos CSS para mejorar la presentación visual de las páginas.

--- a/CistellAissam/Views/Cistell/Cistell.cshtml
+++ b/CistellAissam/Views/Cistell/Cistell.cshtml
@@ -15,8 +15,10 @@
             align-items: center;
             grid-template-columns: repeat(3, 1fr);
             gap: 20px;
+            font-family: 'Courier New';
    
         }
+        
     </style>
 }
 @{
@@ -26,11 +28,11 @@
    
     @foreach (var product in Model){
             <figure class="figure col mb-5" style="text-align:center; ">
-                <img width="300" height="300" src="/imatgesProductes/@product.imatgeproducte" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                <img width="300" height="300" src="/imatgesProductes/productes/@product.imatgeproducte" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
                 <figcaption class="figure-caption">@product.nomProducte <br /><b>@product.preuProducte €</b></figcaption>
                 <form asp-controller="Cistell" asp-action="Afegir" method="post">
                         <input type="hidden" name="codeproducte" value="@product.codiProducte"/>
-                <input class="btn btn-outline-secondary" type="submit" value="Afegir a Cesta"/>
+                <input class="btn btn-outline-secondary fa" type="submit" value="Afegir a Cesta"/>
                 </form>
                  
        </figure>
