--- a/CistellAissam/Views/Cistell/FinalitzarCompra.cshtml
+++ b/CistellAissam/Views/Cistell/FinalitzarCompra.cshtml
@@ -35,7 +35,7 @@
     {
           
             <tr>
-                    <td> <img class="product-image" src="/imatgesProductes/@producte.imatgeproducte" alt="@producte.nomProducte"></td>
+                    <td> <img class="product-image" src="/imatgesProductes/Productes/@producte.imatgeproducte" alt="@producte.nomProducte"></td>
                     <td>@producte.nomProducte</td>
                     
                     <td>@producte.preuProducte</td>
@@ -44,7 +44,7 @@
             </tr>
     }
                 </tbody>
-                <tr><td colspan="4" style="text-align:end;">Total : @ViewData["preuTotal"]</td></tr>
+                <tr><td colspan="4" style="text-align:end;">Total : @ViewData["preuTotal"] €</td></tr>
     </table>
           
         </div>
