--- a/CistellAissam/Views/Shared/LayoutCistel.cshtml
+++ b/CistellAissam/Views/Shared/LayoutCistel.cshtml
@@ -4,11 +4,13 @@
     <title id="titol">
         Aissam-@ViewData["title"]</title>
     <style>
+        
         main {
             display: flex;
         }
 
         .sidebar {
+            font-family: 'Courier New';
             display: flex;
             flex-direction: column;
             flex-shrink: 0;
