Añadir y actualizar funcionalidades en CistellController
Se ha añadido una nueva acción `Actualitzar` en el controlador
`CistellController` para obtener y mostrar un producto por su código
en una vista para actualizarlo. También se ha añadido la acción
`ActualitzarProducte` con el atributo `HttpPost` para actualizar un
producto si el modelo es válido, y la acción `EsborrarProducte` para
eliminar un producto por su código y redirigir a la acción `Index`.

En la vista `Cistell.cshtml`, se ha modificado el formulario para que
use la acción `Actualitzar` en lugar de `Afegir`, y se han añadido
botones para actualizar y eliminar productos. Además, se ha añadido
una sección de scripts para manejar el evento de clic del botón
"Afegir a Cesta" y actualizar el contador de productos en la cesta
sin recargar la página.

Se ha añadido un botón "Imprimir" en la vista `FinalitzarCompra.cshtml`
que permite imprimir la página, y se ha actualizado el archivo
`estilFinCompra.css` para ocultar el botón "Imprimir" cuando se imprime
la página. También se ha añadido una sección de scripts en
`FinalitzarCompra.cshtml` para manejar el evento de clic del botón
"Imprimir" y ejecutar la función `window.print()`.

Finalmente, se ha creado una nueva vista `ActualitzarProducte.cshtml`
que contiene un formulario para actualizar los detalles de un producto.

--- a/CistellAissam/Views/Cistell/Cistell.cshtml
+++ b/CistellAissam/Views/Cistell/Cistell.cshtml
@@ -30,14 +30,21 @@
             <figure class="figure col mb-5" style="text-align:center; ">
                 <img width="300" height="300" src="/imatgesProductes/productes/@product.imatgeproducte" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
                 <figcaption class="figure-caption">@product.nomProducte <br /><b>@product.preuProducte €</b></figcaption>
-                <form enctype="multipart/form-data" asp-controller="Cistell" asp-action="Afegir" method="post">
+                <form asp-controller="Cistell" asp-action="Actualitzar" method="post">
                         <input type="hidden" name="codeproducte" value="@product.codiProducte"/>
-                <input id="btn-submit" class="btn btn-outline-secondary fa" type="submit" value="Afegir a Cesta"/>
+                <input id="btn-afegir" class="btn btn-outline-secondary fa" type="submit" value="Afegir a Cesta"/>
+                <button type="submit" class="btn btn-outline-secondary fa" id="btn-update"><i class="fa-solid fa-arrows-rotate"></i></button>
+					<button type="submit" asp-action="EsborrarProducte" asp-controller="Cistell" class="btn btn-outline-danger fa" id="btn-delete"><i class="fa-solid fa-trash"></i></button>
                 </form>
                  
        </figure>
           
     }
+
+       
+
+            
+        
 
 
  </div>
@@ -46,8 +53,8 @@
 @section Scripts {
 	<script>
         document.addEventListener('click',(e)=>{
-            if(e.target.matches("#btn-submit")){
-				//alert("Producte afegit a la cistella");
+            if(e.target.matches("#btn-afegir")){
+				
 				e.preventDefault();
 				fetch("/Cistell/Afegir", {
 					method: "POST",
