--- a/CistellAissam/Views/Cistell/Cistell.cshtml
+++ b/CistellAissam/Views/Cistell/Cistell.cshtml
@@ -30,10 +30,12 @@
             <figure class="figure col mb-5" style="text-align:center; ">
                 <img width="300" height="300" src="/imatgesProductes/productes/@product.imatgeproducte" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
                 <figcaption class="figure-caption">@product.nomProducte <br /><b>@product.preuProducte €</b></figcaption>
-                <form asp-controller="Cistell" asp-action="Afegir" method="post">
+                
+                    <form asp-controller="Cistell" asp-action="Afegir" method="post">
                         <input type="hidden" name="codeproducte" value="@product.codiProducte"/>
-                <input class="btn btn-outline-secondary fa" type="submit" value="Afegir a Cesta"/>
+                        <input class="btn btn-outline-secondary fa" id="btn-afegir" type="button" value="Afegir a Cesta"/>
                 </form>
+                
                  
        </figure>
           
@@ -42,4 +44,20 @@
 
  </div>
 }
+
+@section Scripts {
+ 	<script>
+         document.addEventListener('click',(e)=>{
+            
+             if(e.target.matches("#btn-afegir")){
+ 				
+ 				e.preventDefault();
+ 				fetch("/Cistell/Afegir", {
+ 					method: "POST",
+ 					body:new FormData(e.target.form),
+                 }).then(response => response.json()).then(res=>document.getElementById("contador").innerText = res.contador);
+             }
+         });
+     </script>
+ }
 
