--- a/CistellAissam/Views/Shared/LayoutCistel.cshtml
+++ b/CistellAissam/Views/Shared/LayoutCistel.cshtml
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+   
     <title id="titol">
         Aissam-@ViewData["title"]</title>
     <style>
@@ -35,6 +36,9 @@
        a{
             color:white;
         }
+        ul>.nav-link{
+         padding:25px;
+        }
 
       
       
@@ -51,13 +55,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
+    @{
+
+        var userauth = (Usuari)ViewData["userauth"];
+    }
     <main>
         <div class="sidebar">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                 <img src="~/imatgesProductes/output-onlinepngtools.png" alt="logoempressa" />
             </a>
             <hr>
-            <ul class="nav nav-pills flex-column mb-auto">
+            <ul class="nav nav-pills flex-column mb-auto" >
                 <li class="nav-item">
                     <a asp-controller="Cistell" style="color:white;" asp-action="Index" class="nav-link" id="tienda" aria-current="page">
                         🛍️ &nbsp; BOTIGA
@@ -67,16 +75,47 @@
                 {
                 <li>
                     <a asp-controller="Cistell" asp-action="Cestill" class="nav-link" id="Cistell" aria-current="page">
-                        <svg data-name="Layer 1" width="30px" id="Layer_1" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title /><path fill="white" d="M5.53,5,5,3H1.25a1,1,0,0,0,0,2H3.47L6.7,18H20V16H8.26l-.33-1.34L21,12.17V5ZM19,10.52,7.45,12.71,6,7H19ZM7,19a1.5,1.5,0,1,0,1.5,1.5A1.5,1.5,0,0,0,7,19Zm12,0a1.5,1.5,0,1,0,1.5,1.5A1.5,1.5,0,0,0,19,19Z" /></svg>&nbsp;<span class="text-warning">@ViewData["contador"]</span>
+                            <svg data-name="Layer 1" width="30px" id="Layer_1" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title /><path fill="white" d="M5.53,5,5,3H1.25a1,1,0,0,0,0,2H3.47L6.7,18H20V16H8.26l-.33-1.34L21,12.17V5ZM19,10.52,7.45,12.71,6,7H19ZM7,19a1.5,1.5,0,1,0,1.5,1.5A1.5,1.5,0,0,0,7,19Zm12,0a1.5,1.5,0,1,0,1.5,1.5A1.5,1.5,0,0,0,19,19Z" /></svg>&nbsp;<span class="text-warning" id=" contador">@ViewData["contador"]</span>
                     </a>
                 </li>
                 }
+                 @if (userauth != null)
+                    {
+                        @if (userauth.isAdmin)
+                        {
                 <li>
-                    <a asp-controller="Producte" style="color:white;" asp-action="Index" class="nav-link" id="Cistell" aria-current="page">
-                   <i class="fa fa-plus"></i> Afegir Nou Producte
-                    </a>
+                   
+
+
+                            <a asp-controller="Producte" style="color:white;" asp-action="Index" class="nav-link" id="Cistell" aria-current="page">
+                                <i class="fa fa-plus"></i> Afegir Nou Producte
+                            </a>
+                      
                 </li>
-              
+                    }
+                }
+                @if (userauth == null)
+                 {
+                <li>
+                    <a asp-controller="Login" style="color:white;" asp-action="Index" class="nav-link" id="Cistell" aria-current="page">
+                            <i class="bi bi-box-arrow-right"></i>&nbsp; Login
+                    </a>
+                    </li>
+                }
+                else
+                {
+
+                    <li style="color:white;" class="nav-link">
+                        <i class="fa fa-user"></i>&nbsp;@userauth.email
+                    </li>
+                    <li>
+                        <a asp-controller="Login" style="color:white;" asp-action="Logout" class="nav-link" id="Cistell" aria-current="page">
+                            <i class="bi bi-box-arrow-left"></i>&nbsp; Logout
+                        </a>
+                    </li>
+
+                }
+
             </ul>
         </div>
 
