Mejoras en gestión de sesión y apariencia de login
Se ha modificado el controlador `CistellController` para utilizar la nueva utilidad `SessionUtils.ObtenerUsuariAuth(HttpContext)` en varios métodos, mejorando la gestión de la sesión del usuario. En el método `Afegir`, se ha añadido una verificación para evitar que los administradores añadan productos a la cesta y se ha cambiado la respuesta para devolver un objeto JSON.

En el `ProducteController`, se ha añadido una verificación para permitir solo a los administradores acceder a la vista de agregar productos y se ha renombrado el método `OnPostUploadAsync` a `CargarImatge`.

Se ha añadido una nueva utilidad `ObtenerUsuariAuth` en `SessionUtils` y se ha modificado la vista `Cistell.cshtml` para manejar la respuesta JSON del método `Afegir`.

En la vista `login.cshtml`, se ha mejorado la apariencia del formulario de inicio de sesión con nuevos estilos y estructura HTML. También se ha añadido un nuevo archivo de estilos `estilslogin.css`.

Finalmente, se ha corregido un pequeño error de formato en el contador de la cesta en la vista `LayoutCistel.cshtml`.

--- a/CistellAissam/Views/Cistell/Cistell.cshtml
+++ b/CistellAissam/Views/Cistell/Cistell.cshtml
@@ -55,7 +55,16 @@
  				fetch("/Cistell/Afegir", {
  					method: "POST",
  					body:new FormData(e.target.form),
-                 }).then(response => response.json()).then(res=>document.getElementById("contador").innerText = res.contador);
+                 }).then(response => response.json()).then(res=>{
+                     console.log(res);
+                     if(res.error == undefined){
+                      document.getElementById("contador").innerText = res.count;
+                     }else{
+                         alert(res.error);
+                     }
+                    
+                 });
+
              }
          });
      </script>
