--- a/CistellAissam/wwwroot/css/estilslogin.css
+++ b/CistellAissam/wwwroot/css/estilslogin.css
@@ -3,6 +3,7 @@
     
     height: 40px;
 }
+
 .card{
     width:45%;
     margin-top:120px;
@@ -10,8 +11,11 @@
     margin-left:auto;
     margin-right:auto;
 }
+.card-header{
+    text-align:center;
+}
 body {
-    background-image: url("../imatgesProductes/back2.jpg") ;
+    background-image: url("../imatgesProductes/back3.webp") ;
     background-size: cover;
 }
 
@@ -28,3 +32,18 @@ form {
     margin-left: auto;
     margin-right: auto;
 }
+label{
+    font-weight:bold;
+}
+label::after{
+    content:"*";
+    color:red;
+}
+
+/*
+.entrada:valid{
+    border-color:lawngreen;
+}
+input:invalid{
+    border-color:red;
+}*/
