--- a/CistellAissam/Views/Shared/LayoutCistel.cshtml
+++ b/CistellAissam/Views/Shared/LayoutCistel.cshtml
@@ -7,37 +7,38 @@
     <style>
         
         main {
-            display: flex;
+           /* display: flex;*/
         }
 
         .sidebar {
             font-family: 'Courier New';
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             flex-shrink: 0;
             padding: 15px;
-            text-white;
-            background-color: #343a40; /* Bootstrap dark */
-            width: 280px;
+            /*text-white;*/
+            background-color: black; /* Bootstrap dark */
+          /*  width: 280px;
             height: 100vh; /* Full height */
             position: sticky;
             top: 0; /* Sticky position starts at the top */
         }
 
             .sidebar img {
-                width: 250px;
+                width: 270px;
                 margin-bottom: 1rem;
             }
 
         .b-example-divider {
             flex-grow: 1;
-            padding: 20px;
+            padding: 40px;
         }
        a{
             color:white;
         }
         ul>.nav-link{
-         padding:25px;
+        
+         margin-top:45px;
         }
 
       
@@ -65,7 +66,7 @@
                 <img src="~/imatgesProductes/output-onlinepngtools.png" alt="logoempressa" />
             </a>
             <hr>
-            <ul class="nav nav-pills flex-column mb-auto" >
+            <ul class="nav nav-pills flex mb-auto" >
                 <li class="nav-item">
                     <a asp-controller="Cistell" style="color:white;" asp-action="Index" class="nav-link" id="tienda" aria-current="page">
                         🛍️ &nbsp; BOTIGA
@@ -105,7 +106,7 @@
                 else
                 {
 
-                    <li style="color:white;" class="nav-link">
+                    <li style="color:white;">
                         <i class="fa fa-user"></i>&nbsp;@userauth.email
                     </li>
                     <li>
