--- a/CistellAissam/wwwroot/css/estiltienda.css
+++ b/CistellAissam/wwwroot/css/estiltienda.css
@@ -22,9 +22,12 @@
 /* Cuadrícula de productos */
 .productes {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(800px, 2fr));
+   margin-left:400px;
     gap: 20px;
     margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Tarjeta de producto */
@@ -131,6 +134,15 @@ a:active {
 }
 .icona {
     width: 55%;
+}
+
+
+ul> li{
+   padding:15px;
+}
+
+ul > li:hover {
+    background-color: #2AC0EB;
 }
 
 
