Refactorización y mejoras en inyección de dependencias
Se han reorganizado y optimizado las declaraciones de `using` en varios archivos, eliminando referencias innecesarias y añadiendo las necesarias.

En varios controladores (`CistellController.cs`, `LoginController.cs`, `ProducteController.cs`), se ha reemplazado la instancia directa de repositorios por inyecciones de dependencias de sus respectivas interfaces.

Se han realizado mejoras en la legibilidad y formato del código en múltiples archivos (`Productes.cs`, `Usuaris.cs`, `Cistella.cs`, `Cistelles.cs`, `Producte.cs`, `Usuari.cs`, `SessionUtils.cs`, `UsuariUtils.cs`).

Se han añadido las inyecciones de dependencias en `Program.cs` para `ICistellRepository`, `IProducteRepository` y `IUsuariRepository`.

Se han implementado las interfaces `ICistellRepository`, `IProducteRepository` y `IUsuariRepository` en sus respectivos archivos de repositorio.

Se han realizado cambios en el estilo CSS de varios archivos (`Cistell.cshtml`, `LayoutCistel.cshtml`, `estiltienda.css`) para mejorar la apariencia y funcionalidad.

Se han añadido las interfaces `ICistellRepository`, `IProducteRepository` y `IUsuariRepository` con métodos específicos en sus respectivos archivos.

--- a/CistellAissam/Views/Shared/LayoutCistel.cshtml
+++ b/CistellAissam/Views/Shared/LayoutCistel.cshtml
@@ -11,13 +11,14 @@
         }
 
         .sidebar {
-            font-family: 'Courier New';
+            font-family:Barlow, Arial, Helvetica, sans-serif;
             display: flex;
             flex-direction: row;
             flex-shrink: 0;
             padding: 15px;
+            font-weight: 700;
             /*text-white;*/
-            background-color: black; /* Bootstrap dark */
+            background-color: #141B5D; /* Bootstrap dark */
           /*  width: 280px;
             height: 100vh; /* Full height */
             position: sticky;
@@ -69,7 +70,7 @@
             <ul class="nav nav-pills flex mb-auto" >
                 <li class="nav-item">
                     <a asp-controller="Cistell" style="color:white;" asp-action="Index" class="nav-link" id="tienda" aria-current="page">
-                        🛍️ &nbsp; BOTIGA
+                        🛍 &nbsp; BOTIGA
                     </a>
                 </li>
                 @if(ViewData["pagina"] != "afegir")
@@ -88,9 +89,9 @@
                    
 
 
-                            <a asp-controller="Producte" style="color:white;" asp-action="Index" class="nav-link" id="Cistell" aria-current="page">
-                                <i class="fa fa-plus"></i> Afegir Nou Producte
-                            </a>
+                    <a asp-controller="Producte" style="color:white;" asp-action="Index" class="nav-link" id="Cistell" aria-current="page">
+                        <i class="fa fa-plus"></i> Afegir Nou Producte
+                    </a>
                       
                 </li>
                     }
