--- a/CistellAissam/wwwroot/css/estiltienda.css
+++ b/CistellAissam/wwwroot/css/estiltienda.css
@@ -21,13 +21,14 @@
 
 /* Cuadrícula de productos */
 .productes {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(800px, 2fr));
+    display: flex;
+    flex-wrap:wrap;
    margin-left:400px;
-    gap: 20px;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
+    width:1080px;
+   gap:60px;
 }
 
 /* Tarjeta de producto */
@@ -46,8 +47,8 @@
 
 /* Imagen del producto */
 .product-image {
-    width: 100px;
-    height: 100px;
+    width: 300px;
+    height: 300px;
     object-fit: cover;
     border-radius: 4px;
     margin-right: 15px;
@@ -117,13 +118,11 @@
     transition: background-color 0.2s;
 }
 
-    .checkout-btn:hover {
-        background-color: #218838;
-    }
-
-a:active {
-    background-color: #000000;
+.checkout-btn:hover {
+    background-color: #218838;
 }
+
+
 
 .product-image {
     margin-bottom: 10px;
@@ -137,12 +136,15 @@ a:active {
 }
 
 
-ul> li{
-   padding:15px;
+ul > li {
+    padding-right: 10px;
+    padding-left: 10px;
+    margin-top:25px;
+    
 }
 
 ul > li:hover {
-    background-color: #2AC0EB;
+    background-color: #6bd501;
 }
 
 
