--- a/CistellAissam/Views/Cistell/cistellCompra.cshtml
+++ b/CistellAissam/Views/Cistell/cistellCompra.cshtml
@@ -9,6 +9,14 @@
         .cistella-container {
             font-family: 'Courier New';
        }
+       .product-card{
+           height:200px;
+       }
+
+        .product-image{
+            height:150px !important;
+            width: 120px !important;
+        }
        
    </style>
 }
