--- a/CistellAissam/Views/Shared/LayoutCistel.cshtml
+++ b/CistellAissam/Views/Shared/LayoutCistel.cshtml
@@ -1,135 +1,116 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-   
-    <title id="titol">
-        Aissam-@ViewData["title"]</title>
-    <style>
-        
-        main {
-           /* display: flex;*/
-        }
-
-        .sidebar {
-            font-family:Barlow, Arial, Helvetica, sans-serif;
-            display: flex;
-            flex-direction: row;
-            flex-shrink: 0;
-            padding: 15px;
-            font-weight: 700;
-            /*text-white;*/
-            background-color: #141B5D; /* Bootstrap dark */
-          /*  width: 280px;
-            height: 100vh; /* Full height */
-            position: sticky;
-            top: 0; /* Sticky position starts at the top */
-        }
-
-            .sidebar img {
-                width: 270px;
-                margin-bottom: 1rem;
-            }
-
-        .b-example-divider {
-            flex-grow: 1;
-            padding: 40px;
-        }
-       a{
-            color:white;
-        }
-        ul>.nav-link{
-        
+   <head>
+      <title id="titol">
+         Aissam-@ViewData["title"]
+      </title>
+      <style>
+         main {
+         /* display: flex;*/
+         }
+         .sidebar {
+         font-family:Barlow, Arial, Helvetica, sans-serif;
+         display: flex;
+         flex-direction: row;
+         flex-shrink: 0;
+         padding: 15px;
+         font-weight: 700;
+         /*text-white;*/
+         background-color: #141B5D; /* Bootstrap dark */
+         /*  width: 280px;
+         height: 100vh; /* Full height */
+         position: sticky;
+         top: 0; /* Sticky position starts at the top */
+         }
+         .sidebar img {
+         width: 270px;
+         margin-bottom: 1rem;
+         }
+         .b-example-divider {
+         flex-grow: 1;
+         padding: 40px;
+         }
+         a{
+         color:white;
+         }
+         ul>.nav-link{
          margin-top:45px;
-        }
-
-      
-      
-
-        
-    </style>
-
+         }
+      </style>
     @await RenderSectionAsync("Css", required: false)
-    <link rel="stylesheet" href="~/css/estiltienda.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-</head>
-<body>
+      <link rel="stylesheet" href="~/css/estiltienda.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+   </head>
+   <body>
     @{
-
         var userauth = (Usuari)ViewData["userauth"];
     }
-    <main>
-        <div class="sidebar">
+      <main>
+         <div class="sidebar">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                <img src="~/imatgesProductes/output-onlinepngtools.png" alt="logoempressa" />
+            <img src="~/imatgesProductes/output-onlinepngtools.png" alt="logoempressa" />
             </a>
             <hr>
             <ul class="nav nav-pills flex mb-auto" >
-                <li class="nav-item">
-                    <a asp-controller="Cistell" style="color:white;" asp-action="Index" class="nav-link" id="tienda" aria-current="page">
-                        🛍 &nbsp; BOTIGA
-                    </a>
-                </li>
-                @if(ViewData["pagina"] != "afegir")
+               <li class="nav-item">
+                  <a asp-controller="Cistell" style="color:white;" asp-action="Index" class="nav-link" id="tienda" aria-current="page">
+                  🛍 &nbsp; BOTIGA
+                  </a>
+               </li>
+                @if (ViewData["pagina"] != "afegir")
                 {
-                <li>
-                    <a asp-controller="Cistell" asp-action="Cestill" class="nav-link" id="Cistell" aria-current="page">
-                            <svg data-name="Layer 1" width="30px" id="Layer_1" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title /><path fill="white" d="M5.53,5,5,3H1.25a1,1,0,0,0,0,2H3.47L6.7,18H20V16H8.26l-.33-1.34L21,12.17V5ZM19,10.52,7.45,12.71,6,7H19ZM7,19a1.5,1.5,0,1,0,1.5,1.5A1.5,1.5,0,0,0,7,19Zm12,0a1.5,1.5,0,1,0,1.5,1.5A1.5,1.5,0,0,0,19,19Z" /></svg>&nbsp;<span class="text-warning" id="contador">@ViewData["contador"]</span>
-                    </a>
-                </li>
+                   <li>
+                      <a asp-controller="Cistell" asp-action="Cestill" class="nav-link" id="Cistell" aria-current="page">
+                         <svg data-name="Layer 1" width="30px" id="Layer_1" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <title />
+                            <path fill="white" d="M5.53,5,5,3H1.25a1,1,0,0,0,0,2H3.47L6.7,18H20V16H8.26l-.33-1.34L21,12.17V5ZM19,10.52,7.45,12.71,6,7H19ZM7,19a1.5,1.5,0,1,0,1.5,1.5A1.5,1.5,0,0,0,7,19Zm12,0a1.5,1.5,0,1,0,1.5,1.5A1.5,1.5,0,0,0,19,19Z" />
+                         </svg>
+                         &nbsp;<span class="text-warning" id="contador">@ViewData["contador"]</span>
+                      </a>
+                   </li>
                 }
-                 @if (userauth != null)
+                @if (userauth != null)
+                {
+                    @if (userauth.isAdmin)
                     {
-                        @if (userauth.isAdmin)
-                        {
-                <li>
-                   
-
-
-                    <a asp-controller="Producte" style="color:white;" asp-action="Index" class="nav-link" id="Cistell" aria-current="page">
-                        <i class="fa fa-plus"></i> Afegir Nou Producte
-                    </a>
-                      
-                </li>
+                       <li>
+                          <a asp-controller="Producte" style="color:white;" asp-action="Index" class="nav-link" id="Cistell" aria-current="page">
+                          <i class="fa fa-plus"></i> Afegir Nou Producte
+                          </a>
+                       </li>
                     }
                 }
                 @if (userauth == null)
-                 {
-                <li>
-                    <a asp-controller="Login" style="color:white;" asp-action="Index" class="nav-link" id="Cistell" aria-current="page">
-                            <i class="bi bi-box-arrow-right"></i>&nbsp; Login
-                    </a>
-                    </li>
+                {
+                   <li>
+                      <a asp-controller="Login" style="color:white;" asp-action="Index" class="nav-link" id="Cistell" aria-current="page">
+                      <i class="bi bi-box-arrow-right"></i>&nbsp; Login
+                      </a>
+                   </li>
                 }
                 else
                 {
-
-                    <li style="color:white;">
-                        <i class="fa fa-user"></i>&nbsp;@userauth.email
-                    </li>
-                    <li>
-                        <a asp-controller="Login" style="color:white;" asp-action="Logout" class="nav-link" id="Cistell" aria-current="page">
-                            <i class="bi bi-box-arrow-left"></i>&nbsp; Logout
-                        </a>
-                    </li>
-
+                   <li style="color:white;">
+                      <i class="fa fa-user"></i>&nbsp;@userauth.email
+                   </li>
+                   <li>
+                      <a asp-controller="Login" style="color:white;" asp-action="Logout" class="nav-link" id="Cistell" aria-current="page">
+                      <i class="bi bi-box-arrow-left"></i>&nbsp; Logout
+                      </a>
+                   </li>
                 }
-
             </ul>
-        </div>
-
-        <div class="b-example-divider">
+         </div>
+         <div class="b-example-divider">
             @RenderBody()
-        </div>
-    </main>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-
+         </div>
+      </main>
+      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     @await RenderSectionAsync("Scripts", required: false)
-    <script src="/js/site.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+      <script src="/js/site.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+   </body>
 </html>
