Reemplazar `Usuari` con `UsuariLogin` en todo el proyecto
Se ha reemplazado la clase `Usuari` con `UsuariLogin` en todo el código.
Esto incluye la eliminación de `Usuari` y la creación de `UsuariLogin`
con las mismas propiedades y métodos. Se han actualizado las firmas
de métodos en `IUsuariRepository.cs`, `UsuariRepository.cs` y
`UsuariRepositoryBD.cs` para usar `UsuariLogin`. También se han
modificado los métodos en `SessionUtils.cs` y `UsuariUtils.cs` para
trabajar con `UsuariLogin`. En las vistas `login.cshtml` y
`LayoutCistel.cshtml`, se ha cambiado el modelo y la variable
`userauth` a `UsuariLogin`. Además, se han comentado líneas en
`Program.cs` relacionadas con la configuración de servicios.

--- a/CistellAissam/Views/Shared/LayoutCistel.cshtml
+++ b/CistellAissam/Views/Shared/LayoutCistel.cshtml
@@ -46,7 +46,7 @@
    </head>
    <body>
     @{
-        var userauth = (Usuari)ViewData["userauth"];
+        var userauth = (UsuariLogin)ViewData["userauth"];
     }
       <main>
          <div class="sidebar">
