Añadida búsqueda en CistellController y ajustes menores
Se ha modificado el constructor de `CistellController` para eliminar un comentario innecesario y mantener solo la inicialización de `_DBContext`.

En el método `Index` de `CistellController`, se ha añadido un parámetro `filter` para permitir la búsqueda de productos. La lógica ahora filtra los productos por nombre si se proporciona un filtro.

Se ha añadido un formulario de búsqueda en la vista `Cistell.cshtml` que envía datos al método `Index` mediante `POST`.

En `appsettings.json`, se ha eliminado la contraseña de la cadena de conexión `DefaultConnection` por motivos de seguridad.

--- a/CistellAissam/Views/Cistell/Cistell.cshtml
+++ b/CistellAissam/Views/Cistell/Cistell.cshtml
@@ -20,7 +20,16 @@
    
      
     <div class="productes">
-   
+        <div class="input-group">
+        <form method="post">
+            <div class="form-outline" data-mdb-input-init>
+                <input type="search" id="form1" name="filter" class="form-control" placeholder="Buscar Producte." />
+            </div>
+            <button asp-controller="Cistell" asp-action="index" type="submit" class="btn btn-primary" data-mdb-ripple-init>
+                <i class="fas fa-search"></i>
+            </button>
+            </form>
+        </div>
     @foreach (var product in Model){
             <figure class="figure col mb-5" style="text-align:center; ">
                 <img style="width:300px !important;" width="300" height="300" src="/imatgesProductes/productes/@product.imatgeproducte" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
