--- a/CistellAissam/Views/Shared/LayoutCistel.cshtml
+++ b/CistellAissam/Views/Shared/LayoutCistel.cshtml
@@ -81,6 +81,11 @@
                           <i class="fa fa-plus"></i> Afegir Nou Producte
                           </a>
                        </li>
+                        <li>
+                            <a asp-controller="Usuari" style="color:white;" asp-action="Index" class="nav-link" id="Cistell" aria-current="page">
+                                <i class="bi bi-box-arrow-right"></i>&nbsp; Gestionar Usuaris
+                            </a>
+                        </li>
                     }
                 }
                 @if (userauth == null)
@@ -93,8 +98,10 @@
                 }
                 else
                 {
+                    
                    <li style="color:white;">
-                      <i class="fa fa-user"></i>&nbsp;@userauth.email
+                      <a asp-controller="Login" style="color:white;" asp-action="Index" class="nav-link" id="Cistell" aria-current="page">
+                        <i class="fa fa-user"></i>&nbsp;@userauth.email</a>
                    </li>
                    <li>
                       <a asp-controller="Login" style="color:white;" asp-action="Logout" class="nav-link" id="Cistell" aria-current="page">
