--- a/CistellAissam/Views/Shared/LayoutCistel.cshtml
+++ b/CistellAissam/Views/Shared/LayoutCistel.cshtml
@@ -51,7 +51,7 @@
       <main>
          <div class="sidebar">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-            <img src="~/imatgesProductes/output-onlinepngtools.png" alt="logoempressa" />
+            <img src="/imatgesProductes/output-onlinepngtools.png" alt="logoempressa" />
             </a>
             <hr>
             <ul class="nav nav-pills flex mb-auto" >
