--- a/CistellAissam/Views/Cistell/Cistell.cshtml
+++ b/CistellAissam/Views/Cistell/Cistell.cshtml
@@ -20,19 +20,22 @@
    
      
     <div class="productes">
-        <div class="input-group">
+        <div>
         <form method="post">
-            <div class="form-outline" data-mdb-input-init>
-                <input type="search" id="form1" name="filter" class="form-control" placeholder="Buscar Producte." />
-            </div>
-            <button asp-controller="Cistell" asp-action="index" type="submit" class="btn btn-primary" data-mdb-ripple-init>
-                <i class="fas fa-search"></i>
-            </button>
-            </form>
+                <div class="input-group">
+                    <div class="form-outline" data-mdb-input-init>
+                        <input type="search" id="form1" name="filter" class="form-control" placeholder="Buscar Producte." />
+                    </div>
+                    <button asp-controller="Cistell" asp-action="index" type="submit" class="btn btn-primary" data-mdb-ripple-init>
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
+        </form>
         </div>
+        <br>
     @foreach (var product in Model){
             <figure class="figure col mb-5" style="text-align:center; ">
-                <img style="width:300px !important;" width="300" height="300" src="/imatgesProductes/productes/@product.imatgeproducte" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                <img style="width:300px !important;" width="300" height="300" src="/imatgesProductes/Productes/@product.imatgeproducte" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
                 <figcaption class="figure-caption">@product.nomProducte <br /><b>@product.preuProducte €</b></figcaption>
                 
                     <form asp-controller="Cistell" asp-action="Afegir" method="post">
