--- a/CistellAissam/Views/Shared/LayoutCistel.cshtml
+++ b/CistellAissam/Views/Shared/LayoutCistel.cshtml
@@ -15,6 +15,7 @@
          flex-shrink: 0;
          padding: 15px;
          font-weight: 700;
+			z-index: 999;
          /*text-white;*/
          background-color: #141B5D; /* Bootstrap dark */
          /*  width: 280px;
